--- a/src/components/Dropdown/DropdownList.module.scss
+++ b/src/components/Dropdown/DropdownList.module.scss
@@ -2,6 +2,7 @@
 
 .dropdownList {
   position: absolute;
+  z-index: 100;
   display: flex;
   flex-direction: column;
   gap: 5px;
